--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 187 points<br>
+Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 193 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -63,6 +63,7 @@ Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
+<li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -72,22 +73,22 @@ Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    263 status
-    242 --git-dir=.git
-    127 checkout
-    105 difftool
+    270 status
+    259 --git-dir=.git
+    140 checkout
+    106 difftool
+     89 branch
      88 add
      84 commit
-     84 branch
-     77 help
-     49 push
+     83 help
+     50 push
+     46 reset
      43 rev-parse
-     42 reset
      42 rebase
+     33 diff
      31 --git-dir=/home/stavros/git/otp/.git
+     30 stash
      28 log
-     28 diff
-     19 stash
      18 clean
      15 remote
      14 pull
@@ -98,10 +99,10 @@ Git commands sorted by usage:
       4 merge
       4 --git-dir=/home/stavros/git/dialyzer_tests/.git
       3 init
+      3 config
       3 blame
       2 tag
       2 gc
-      2 config
       1 revert
       1 fetch
       1 achievements
