--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 195 points<br>
+Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 200 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -65,6 +65,7 @@ Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
+<li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -74,24 +75,24 @@ Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    272 status
-    261 --git-dir=.git
-    142 checkout
-    112 difftool
-     89 branch
-     89 add
-     85 help
-     84 commit
+    277 status
+    276 --git-dir=.git
+    148 checkout
+    123 difftool
+     95 add
+     93 branch
+     90 commit
+     86 help
      50 push
-     46 reset
-     43 rev-parse
-     42 rebase
+     48 rev-parse
+     47 reset
+     45 rebase
+     36 stash
+     33 --git-dir=/home/stavros/git/otp/.git
      33 diff
-     32 stash
-     31 --git-dir=/home/stavros/git/otp/.git
      28 log
+     19 remote
      18 clean
-     15 remote
      14 pull
      10 cherry-pick
       9 tree
