--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 200 points<br>
+Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 206 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -57,6 +57,7 @@ Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Cleaning lady (Level 4)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
+<li><div class="title">Cleaning lady (Level 5)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Historian (Level 5)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -75,35 +76,36 @@ Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    277 status
-    276 --git-dir=.git
-    148 checkout
-    123 difftool
-     95 add
-     93 branch
-     90 commit
-     86 help
-     50 push
-     48 rev-parse
-     47 reset
-     45 rebase
-     36 stash
+    351 --git-dir=.git
+    317 status
+    173 checkout
+    151 difftool
+    109 branch
+    108 add
+    107 commit
+    104 help
+     65 rev-parse
+     56 push
+     55 reset
+     48 rebase
+     43 diff
+     38 stash
      33 --git-dir=/home/stavros/git/otp/.git
-     33 diff
+     29 clean
      28 log
      19 remote
-     18 clean
-     14 pull
-     10 cherry-pick
-      9 tree
-      9 mergetool
+     16 pull
+     14 tree
+     14 mergetool
+     12 cherry-pick
       8 bisect
-      4 merge
+      6 merge
       4 --git-dir=/home/stavros/git/dialyzer_tests/.git
       3 init
       3 config
       3 blame
       2 tag
+      2 ls-remote
       2 gc
       1 revert
       1 fetch
