--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 206 points<br>
+Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 212 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -54,6 +54,7 @@ Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Banker (Level 4)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Blacksmith (Level 4)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
+<li><div class="title">Blacksmith (Level 5)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Cleaning lady (Level 4)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
@@ -77,21 +78,21 @@ Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 Git commands sorted by usage:
 <pre style="text-align: left">
     351 --git-dir=.git
-    317 status
-    173 checkout
-    151 difftool
+    321 status
+    174 checkout
+    152 difftool
     109 branch
     108 add
     107 commit
-    104 help
+    106 help
      65 rev-parse
+     56 reset
      56 push
-     55 reset
      48 rebase
-     43 diff
-     38 stash
-     33 --git-dir=/home/stavros/git/otp/.git
-     29 clean
+     44 diff
+     42 clean
+     39 stash
+     34 --git-dir=/home/stavros/git/otp/.git
      28 log
      19 remote
      16 pull
