--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 212 points<br>
+Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 217 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -63,6 +63,7 @@ Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Historian (Level 5)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
+<li><div class="title">Hunter (Level 4)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -77,29 +78,29 @@ Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    351 --git-dir=.git
-    321 status
-    174 checkout
-    152 difftool
-    109 branch
+    357 --git-dir=.git
+    330 status
+    180 checkout
+    156 difftool
+    113 branch
+    109 help
+    108 commit
     108 add
-    107 commit
-    106 help
      65 rev-parse
-     56 reset
+     57 reset
      56 push
      48 rebase
      44 diff
+     42 stash
      42 clean
-     39 stash
      34 --git-dir=/home/stavros/git/otp/.git
      28 log
-     19 remote
+     20 remote
      16 pull
+     16 bisect
      14 tree
      14 mergetool
      12 cherry-pick
-      8 bisect
       6 merge
       4 --git-dir=/home/stavros/git/dialyzer_tests/.git
       3 init
