--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 226 points<br>
+Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 234 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -67,6 +67,7 @@ Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Hunter (Level 4)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
+<li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
@@ -80,25 +81,25 @@ Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    449 --git-dir=.git
-    367 status
-    234 checkout
-    174 difftool
+    460 --git-dir=.git
+    374 status
+    238 checkout
+    177 difftool
     145 branch
-    124 help
-    123 commit
-    114 add
+    129 help
+    127 commit
+    115 add
      76 rev-parse
-     70 push
-     63 rebase
-     62 reset
-     49 diff
+     74 push
+     65 rebase
+     63 reset
+     51 diff
      46 stash
      45 clean
      35 --git-dir=/home/stavros/git/otp/.git
      30 bisect
      28 log
-     23 remote
+     24 remote
      20 pull
      18 mergetool
      16 cherry-pick
