--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 242 points<br>
+Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 245 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -35,6 +35,7 @@ Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Locksmith (Level 1)</div>  <div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Miller (Level 1)</div>  <div class="info">Add only part of a file to the stage 92 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
+<li><div class="title">Apprentice Miller (Level 2)</div>  <div class="info">Add only part of a file to the stage 133 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 2)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 3)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -82,30 +83,30 @@ Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    463 --git-dir=.git
-    397 status
-    239 checkout
-    177 difftool
-    146 branch
-    131 help
-    129 commit
-    123 add
-     77 push
+    483 --git-dir=.git
+    413 status
+    250 checkout
+    182 difftool
+    150 branch
+    137 commit
+    135 help
+    128 add
+     88 push
      76 rev-parse
-     65 rebase
+     66 rebase
      64 reset
-     51 diff
+     52 diff
      48 stash
      45 clean
      35 --git-dir=/home/stavros/git/otp/.git
      30 bisect
+     28 remote
      28 log
-     25 remote
-     20 pull
+     21 pull
      18 mergetool
      16 cherry-pick
      15 tree
-     10 merge
+     11 merge
       6 init
       4 --git-dir=/home/stavros/git/dialyzer_tests/.git
       3 gc
