--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 248 points<br>
+Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 255 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -62,6 +62,7 @@ Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Cleaning lady (Level 4)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Cleaning lady (Level 5)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
+<li><div class="title">Cleaning lady (Level 6)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Historian (Level 5)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -85,27 +86,27 @@ Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 Git commands sorted by usage:
 <pre style="text-align: left">
     498 --git-dir=.git
-    422 status
-    265 checkout
+    440 status
+    266 checkout
     185 difftool
-    158 branch
+    159 branch
+    143 help
     143 commit
-    142 help
     132 add
      94 push
+     86 reset
      76 rev-parse
-     67 rebase
-     66 reset
-     54 diff
+     73 rebase
+     61 clean
+     59 diff
      48 stash
-     45 clean
-     35 --git-dir=/home/stavros/git/otp/.git
+     36 --git-dir=/home/stavros/git/otp/.git
      30 bisect
+     29 log
      28 remote
-     28 log
      21 pull
-     18 mergetool
-     16 tree
+     20 mergetool
+     17 tree
      16 cherry-pick
      12 merge
       6 init
@@ -119,6 +120,7 @@ Git commands sorted by usage:
       1 rm
       1 revert
       1 mv
+      1 merge-base
       1 --git-dir=
       1 fetch
       1 achievements
